--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  moor: 4.4.1
+  sqlite3_flutter_libs: 0.5.0
+  path_provider:
+  path:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  moor_generator: 4.4.1
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
